tests/baselines/reference/emitter.asyncGenerators.classMethods.es2015.errors.txt
tests/cases/conformance/emitter/es2015/asyncGenerators/C4.ts(3,26): error TS2504: Type must have a '[Symbol.asyncIterator]()' method that returns an async iterator.


==== tests/cases/conformance/emitter/es2015/asyncGenerators/C1.ts (0 errors) ====
    class C1 {
        async * f() {
        }
    }
==== tests/cases/conformance/emitter/es2015/asyncGenerators/C2.ts (0 errors) ====
    class C2 {
        async * f() {
            const x = yield;
        }
    }
==== tests/cases/conformance/emitter/es2015/asyncGenerators/C3.ts (0 errors) ====
    class C3 {
        async * f() {
            const x = yield 1;
        }
    }
==== tests/cases/conformance/emitter/es2015/asyncGenerators/C4.ts (1 errors) ====
    class C4 {
        async * f() {
            const x = yield* [1];
                             ~~~
!!! error TS2504: Type must have a '[Symbol.asyncIterator]()' method that returns an async iterator.
        }
    }
==== tests/cases/conformance/emitter/es2015/asyncGenerators/C5.ts (0 errors) ====
    class C5 {
        async * f() {
            const x = yield* (async function*() { yield 1; })();
        }
    }
==== tests/cases/conformance/emitter/es2015/asyncGenerators/C6.ts (0 errors) ====
    class C6 {
        async * f() {
            const x = await 1;
        }
    }
==== tests/cases/conformance/emitter/es2015/asyncGenerators/C7.ts (0 errors) ====
    class C7 {
        async * f() {
            return 1;
        }
    }
==== tests/cases/conformance/emitter/es2015/asyncGenerators/C8.ts (0 errors) ====
    class C8 {
        g() {
        }
        async * f() {
            this.g();
        }
    }
==== tests/cases/conformance/emitter/es2015/asyncGenerators/C9.ts (0 errors) ====
    class B9 {
        g() {}
    }
    class C9 extends B9 {
        async * f() {
            super.g();
        }
    }
    